hphp/hack/test/typecheck/multiple_inheritance.php.exp
File "multiple_inheritance.php", line 6, characters 22-22:
Expected { (Parsing[1002])
