hphp/hack/test/typecheck/multiple_inheritance.php
<?hh

class Bar {}
class Baz {}

class Foo extends Bar, Baz {}
